--- a/index.html
+++ b/index.html
@@ -267,7 +267,16 @@ in their academics."</p>
                                             <h3>Positions Held</h3>
                                         </div>
                                         <ul class="ul-dates">
-                                          <li>
+                                         <li>
+                                              <div class="dates">
+                                                  <span>Present</span>
+                                                  <span>2018</span>
+                                              </div>
+                                              <div class="content">
+                                                  <h4>Secreatry</h4>
+                                                  <p><em>CSI Hyderabad Chapter.</em></p>
+                                              </div>
+                                          </li> <li>
                                               <div class="dates">
                                                   <span>Present</span>
                                                   <span>2014</span>
